--- a/momo.html
+++ b/momo.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="topbar">
-        <div class="board-w flex topbar-board">
+        <div class="container topbar-board flex">
             <nav>
                 <i class="fi fi-rr-home"></i>
                 <a href="#">回首頁</a>
@@ -40,7 +40,7 @@
 
 
     <div class="header">
-        <div class="board-w flex header-board">
+        <div class="container flex header-board">
             <div class="logo">
                 <img src="https://img2.momoshop.com.tw/ecm/img/online/10/998/00/000/bt_0_243_01/bt_0_243_01_e2.png?t=1689215813260"
                     alt="">
@@ -65,25 +65,25 @@
                     alt="">
             </div>
             <div class="class-bar-header">
-                <div class="class-bar-header-value"><i class="fi fi-br-menu-burger"></i>全站商品分類</div>
+               <img src="https://www.momoshop.com.tw/ecm/img/cmm/menutitle.png?t=20190730001" alt="">
             </div>
             <div class="little-bar">
                 <ul class="flex">
-                    <li>樂公益</li>
-                    <li>保險館</li>
-                    <li>超市快配</li>
-                    <li>省錢達人</li>
-                    <li>看看買</li>
-                    <li>週期訂購</li>
-                    <li>品牌旗艦</li>
-                    <li>綠色生活</li>
+                    <li><a href="#">樂公益</a></li>
+                    <li><a href="#">保險館</a></li>
+                    <li><a href="#">超市快配</a></li>
+                    <li><a href="#">省錢達人</a></li>
+                    <li><a href="#">看看買</a></li>
+                    <li><a href="#">週期訂購</a></li>
+                    <li><a href="#">品牌旗艦</a></li>
+                    <li><a href="#">綠色生活</a></li>
                 </ul>
             </div>
         </div>
     </div>
     <div class="banner">
-        <div class="banner-pt flex">
-            <div class="class-item">
+        <div class="container banner-pt">
+            <div class="class-item float-left">
                 <div>家電・ 電玩・ 視聽・廚三機</div>
                 <div>手機・ 平板・ 耳機・攝相機</div>
                 <div class="bottom-bar">電腦・ 電競・ 週邊・零組件</div>
@@ -99,13 +99,13 @@
                 <div>圖書・ 文具・ 影音・樂器</div>
                 <div>旅遊・ 票券・ 加值・軟體</div>
             </div>
-            <div class="banner-swich">
+            <div class="banner-swich float-left">
                 <img src="https://img1.momoshop.com.tw/ecm/img/online/10/999/00/000/bt_0_247_01/bt_0_247_01_P1_9_e2.jpg?t=1689660007283"
                     alt="">
                 <button class="banner-btn"><i class="fi fi-rr-angle-left"></i></i></button>
                 <button class="banner-btn2"><i class="fi fi-rr-angle-right"></i></button>
             </div>
-            <div class="today_ flex">
+            <div class="today-s flex float-left">
                 <p>今日秒殺</p>
                 <div>
                     <button>1</button>
@@ -119,17 +119,16 @@
                 <img src="https://img1.momoshop.com.tw/ecm/img/online/10/999/00/000/bt_0_248_01/bt_0_248_01_P1_3_e2.jpg?t=1689609630719"
                     alt="">
             </div>
-        </div>
-        <div class="banner-lost-bar flex">
-            <img src="https://img2.momoshop.com.tw/ecm/img/online/10/999/00/000/bt_0_249_01/bt_0_249_01_e2.png?t=1689325478187" alt="">
-            <div class="banner-lost-bar-cake">
-                <p><i class="fi fi-brands-youtube"></i>影音購物</p>
+            <div class="banner-lost-bar flex float-left">
+                <img src="https://img2.momoshop.com.tw/ecm/img/online/10/999/00/000/bt_0_249_01/bt_0_249_01_e2.png?t=1689325478187" alt="">
+                <div class="banner-lost-bar-cake">
+                    <p><i class="fi fi-brands-youtube"></i>影音購物</p>
+                </div>
+                <div class="banner-lost-bar-cake">
+                    <p><i class="fi fi-sr-shopping-cart"></i>電視購物 - 現折$100-</p>
+                </div>
             </div>
-            <div class="banner-lost-bar-cake">
-                <p><i class="fi fi-sr-shopping-cart"></i>電視購物 - 現折$100-</p>
-            </div>
         </div>
-
     </div>
 </body>
 
